<resources>
    <string name="app_name">HeartMonitor</string>
    <string name="check">Check</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="set_alarm">Set Reminder</string>
    <string name="save">Save</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="everyday">Everyday</string>
    <string name="reminders">Reminders</string>
    <string name="time_text">10.30 AM</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="confirmEmail">Confirm email</string>
    <string name="registerBtn">Register</string>
    <string name="email">Email</string>
    <string name="loginLink">Already have account? Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personalDetails">Personal Details</string>
    <string name="age">Age</string>
    <string name="condition">Condition</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_medication">MedicationActivity</string>
    <string name="medication">Medication</string>
    <string name="dosage">Frequency</string>
    <string name="mg">mg</string>
    <string name="title_activity_detail_step_form">DetailStepForm</string>
    <string name="medicationDetails">New Medication</string>
    <string name="location">Location</string>
    <string name="weight">Weight</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="strength">Strength</string>
    <string name="addMedication">+ Add Medication</string>
    <string name="frequency">Frequency</string>
    <string-array name="steps_titles">
        <item>Personal Details</item>
        <item>Medication</item>
    </string-array>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="activities">Activitities</string>
    <string name="heartRate">BPM</string>
    <string name="edit">Edit</string>
    <string name="dailyActivity">Daily Activity</string>
    <string name="distance">Distance</string>
    <string name="distanceValue">18</string>
    <string name="distanceType">KM</string>
    <string name="time">Time</string>
    <string name="hourValue">1</string>
    <string name="hourText">hr</string>
    <string name="minText">min</string>
    <string name="minValue">35</string>
    <string name="calories">Calories</string>
    <string name="caloriesLost">475</string>
    <string name="caloriesText"> Kcal</string>
    <string name="newReading">Check Heart Rate</string>
    <string name="dob">Date of Birth</string>
    <string name="basicInfo">Basic Info</string>
    <string name="currentCondition">Current</string>
    <string name="patientNumber">Patient Number</string>
    <string name="patientID">Your patient id</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="relationship">Relationship</string>
    <string name="gp_practice">GP Practice</string>
    <string name="gp_name">GP Name</string>
    <string name="heart">Heart</string>
    <string name="diet">Diet</string>
    <string name="new_n_reading">New\n Reading</string>
    <string name="stats">Stats</string>
    <string name="logs">Logs</string>
    <string name="history">History</string>
    <string name="bpm">BPM</string>
    <string name="default_dpm">0</string>
    <string name="steps">Steps</string>
    <string name="start">Start</string>
    <string name="analysis">Analysis</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="summary">Summary</string>
    <string name="type">Type</string>
    <string name="total">Total</string>
    <string name="auto_detection">Auto Detection</string>
    <string name="no_minutes">0 min</string>
    <string name="no_distance">0 km</string>
    <string name="no_calories">0 cal</string>
    <string name="latest_activity">Latest Activity</string>
    <string name="no_type">---</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="weight_watcher">Weight Watcher</string>
    <string name="change">Change</string>
    <string name="weight_log">Weight Log</string>
    <string name="no_steps">0</string>
    <string name="Dashboard">Dashboard</string>
    <string name="warnings">Warnings</string>
    <string name="none">None</string>
    <string name="feeling">Feeling</string>
    <string name="passport">Passport</string>
    <string-array name="activity">
        <item>Walking</item>
        <item>Running</item>
        <item>Cycling</item>
    </string-array>
    <string name="extra">Extra</string>
    <string name="low">Low</string>
    <string name="latest_reading">Latest Reading</string>
    <string name="status">Status</string>
    <string name="surname">Surname</string>
    <string name="first_name">First name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="ok">OK</string>
    <string name="high">High</string>
    <string name="type_colon">Type:</string>
    <string name="no_value">--</string>
    <string name="fluid_accumulation">Fluid Accumulation</string>
    <string name="kg">kg</string>
    <string name="feeling_today">How are you feeling?</string>
    <string name="personal_details">Personal Details</string>
    <string name="thresholds">Heart Rate Thresholds</string>
    <string name="height">Height</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="resting">Resting</string>
    <string name="general">General</string>
    <string name="total_beats_detected">Total Beats Detected</string>
    <string name="high_rates">High Rates</string>
    <string name="extreme_rates">Extreme Rates</string>
    <string name="highest_rate">Highest BPM</string>
    <string name="lowest_rate">Lowest BPM</string>
    <string name="overall_avg">Overall Average</string>
    <string name="over_one_hundred">100+</string>
    <string name="over_one_twenty">120+</string>
    <string name="target">Target</string>
    <string name="overview">Overview</string>
    <string name="heart_activity">Heart Activity</string>
    <string name="deviation">Deviation</string>
    <string name="frequency_measure">Frequency</string>
    <string name="average_bpm">Average BPM</string>
    <string name="breakdown">Breakdown</string>
    <string name="over_one_twenty_txt"><![CDATA[> 120]]></string>
    <string name="_100_119over_one_hundred_txt">100 – 119</string>
    <string name="over_one_hundred_txt">100 – 119</string>
    <string name="over_eighty_five_txt">85 – 99</string>
    <string name="less_than_forty_txt"><![CDATA[< 40]]></string>
    <string name="over_forty_txt">40 – 54</string>
    <string name="over_fifty_five_txt">55 – 64</string>
    <string name="over_seventy_txt">70 – 85</string>
    <string name="amount">Amount</string>
    <string name="highest_average">Week of Highest Avg</string>
    <string name="day_highest_average">Day of Highest Avg</string>
    <string name="seven_day">7-Day</string>
    <string name="thirty_day">30-Day</string>
    <string name="all">All</string>
    <string name="time_colon">Time:</string>
    <string name="last_24">Last 24</string>
    <string name="no_concerns">There have been no unusual resting rates observed in the last 24 recordings.</string>
    <string name="resting_rates_detected">Resting Rates Detected</string>
    <string name="max_heart_rate">Max Heart Rate</string>
    <string name="resting_rates_100_bpm">Resting Rates 100+ BPM</string>
    <string name="km">KM</string>
    <string name="avg_bpm">Avg BPM</string>
    <string name="morning">5am - 12pm</string>
    <string name="afternoon">12pm - 5pm</string>
    <string name="evening">5pm - 21pm</string>
    <string name="nighttime">21pm - 5am</string>
    <string name="alarms_set">Alarms Set</string>
    <string name="post_activity_resting_rates">Post Activity Resting Rates</string>
    <string name="hourly_analysis">Hourly Analysis</string>
    <string name="hour">Hour</string>
    <string name="hr_over_100_beats_per_minute">HR Over 100 Beats Per Minute</string>
    <string name="hr_under_40_beats_per_minute">HR Under 40 Beats Per Minute</string>
    <string name="avg_hr">Avg HR</string>
    <string name="max_hr">MAX HR</string>
    <string name="min_hr">Min HR</string>
    <string name="rest_hr">Rest HR</string>
    <string name="_7">7</string>
    <string name="_30_day">30-Day</string>
    <string name="_7_day">7-Day</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="select_date">Select Date</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="condition_small">condition</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="change_email">Change Email</string>
    <string name="email_hint">email</string>
    <string name="change_passport_password">Change Passport Password (4-digit)</string>
    <string name="passport_password">passport password</string>
    <string name="confirm_email">confirm email</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string-array name="reminder_types">
        <item>Heart Rate</item>
        <item>Medication</item>
        <item>Appointment</item>
        <item>Weight</item>
    </string-array>
    <string-array name="weight_types">
        <item>kg</item>
        <item>Pounds</item>
    </string-array>
    <string-array name="date_type_selection">
        <item>Custom Date</item>
        <item>Today</item>
        <item>7-Day</item>
        <item>30-Day</item>
        <item>All Time</item>
    </string-array>
    <string-array name="date_selection">
        <item>Today</item>
        <item>7-Day</item>
        <item>30-Day</item>
        <item>All Time</item>
    </string-array>
    <string-array name="timeline_spinner">
        <item>30-Day</item>
        <item>7-Day</item>
        <item>All Time</item>
    </string-array>
    <string-array name="activity_selection">
        <item>Walking</item>
        <item>Running</item>
        <item>Cycling</item>
        <item>Resting</item>
        <item>General</item>
    </string-array>
    <string-array name="min_max_avg">
        <item>Avg Heart Rate</item>
        <item>Min Heart Rate</item>
        <item>Max Heart Rate</item>
    </string-array>
</resources>