<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_reminder"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.shnellers.heartrate.Reminder">

    <Spinner
        android:id="@+id/reminder_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"/>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:padding="5dp"
        android:layout_below="@+id/reminder_type">

    </TimePicker>

    <LinearLayout
        android:id="@+id/days_layout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_below="@+id/time_picker">

        <Button
            android:id="@+id/monday_btn"
            android:layout_width="64dp"
            android:layout_height="25dp"
            android:background="@color/activeButton"
            android:layout_margin="2dp"
            android:text="@string/monday"
            />
        
        <Button
            android:id="@+id/tuesday_btn"
            android:layout_width="64dp"
            android:layout_height="25dp"
            android:background="@color/activeButton"
            android:layout_margin="2dp"
            android:text="@string/tuesday"/>
        
        <Button
            android:id="@+id/wednesday_btn"
            android:layout_width="64dp"
            android:layout_height="25dp"
            android:background="@color/activeButton"
            android:layout_margin="2dp"
            android:text="@string/wednesday"/>

        <Button
            android:id="@+id/thursday_btn"
            android:layout_width="64dp"
            android:layout_height="25dp"
            android:background="@color/activeButton"
            android:layout_margin="2dp"
            android:text="@string/thursday"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/days_layout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/days_layout_1"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/friday_btn"
            android:layout_width="64dp"
            android:layout_height="25dp"
            android:background="@color/activeButton"
            android:layout_margin="2dp"
            android:text="@string/friday"/>

        <Button
            android:id="@+id/saturday_btn"
            android:layout_width="64dp"
            android:layout_height="25dp"
            android:background="@color/activeButton"
            android:layout_margin="2dp"
            android:text="@string/saturday"/>

        <Button
            android:id="@+id/sunday_btn"
            android:layout_width="64dp"
            android:layout_height="25dp"
            android:background="@color/activeButton"
            android:layout_margin="2dp"
            android:text="@string/sunday"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkbox_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/days_layout_2">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/everyday_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everyday"
            android:checked="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/save"/>

</RelativeLayout>
