<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_summary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.shnellers.heartrate.ActivitySummary"
    android:background="#00ffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="24dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="28sp"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_type"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_minutes"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_distance"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_calories"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="8dp"/>

            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_done"/>

    </LinearLayout>

</RelativeLayout>
