<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_marginTop="48dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hourly_analysis"
        android:padding="5dp"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            />

        <TextView
            android:id="@+id/hour_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value"
            android:textAlignment="textStart"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest_hr"
            />

        <TextView
            android:id="@+id/count_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value"
            android:textAlignment="textStart"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_hr"
            />

        <TextView
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value"
            android:textAlignment="textStart"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_hr"
            />

        <TextView
            android:id="@+id/max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value"
            android:textAlignment="textStart"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_hr"
            />

        <TextView
            android:id="@+id/avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value"
            android:textAlignment="textStart"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hr_over_100_beats_per_minute"
           />

        <TextView
            android:id="@+id/over_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value"
            android:textAlignment="textStart"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hr_under_40_beats_per_minute"
            />

        <TextView
            android:id="@+id/under_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value"
            android:textAlignment="textStart"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_gravity="center"
        />

</LinearLayout>
